# THis is going to be published to crates.io so it needs to have every field filled out
[package]
name = "scoped_stack"
version = "1.0.5"
edition = "2021"
authors = ["shreyasm-dev"]
description = "A scoped stack data structure"
readme = "README.md"
repository = "https://gitihub.com/shreyasm-dev/scoped_stack"
license = "MIT"
keywords = ["stack", "scoped", "data-structure"]
categories = ["data-structures"]
documentation = "https://docs.rs/scoped_stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
